# denemelerv1

./: Cargo.toml  KURULUM.bat  LICENSE.txt  README.md  REHBER.md  build_setup.bat  captcha_solver.rs  client_params.rs  client_runner.rs  config.json  config.rs  hw_simulator.rs  kamera.py  kamera_log.txt  lang.rs  login.rs  main.rs  mod.rs  online_learner.rs  online_model.json  pg_ayarlar.rs  pg_captcha.rs  pg_client.rs  pg_esya.rs  pg_farming.rs  pg_genel.rs  pg_kayitlar.rs  pg_ocr.rs  pg_pm.rs  pg_yetenek.rs  pm_ai.rs  preset_manager.rs  remote_controller.html  remote_server.rs  screenshot_dialog.rs  setup.iss  sidebar.rs  stats_dashboard.rs  theme.rs  topbar.rs  (+2 more)
